--- a/src/components/Details.css
+++ b/src/components/Details.css
@@ -1,10 +1,8 @@
-
-
 .Details{
     text-transform: uppercase;
     position: absolute;
     top: 366px;
-    left: 44px;
+    left: 32px;
     line-height: 3em;
 }
 
@@ -13,21 +11,29 @@ input{
     border-radius: 10px;
     padding: 12px;
 text-align: center;
+background-color: #e5d9d9;
+outline: none;
+border: none;
+color: hsl(260, 1.3%, 46.9%);
+}
+
+form p{
+ color:   hsl(279, 6%, 55%);
 }
 
 .cvc-date{
     display: flex;
- 
-    align-items: end;
+    align-items: baseline;
 }
 
-.date-inputs{
-    display: flex;
-    justify-content: space-evenly;
-}
+ 
 
 .date-inputs input{
     width: 24%;
+}
+
+.year{
+    margin-left: 20px;
 }
 
 .cvc input{
@@ -45,13 +51,199 @@ text-align: center;
 }
 
 
-button{
+.btn button{
     outline: none;
+    color: white;
+    width: 82%;
     border: none;
     border-radius: 10px;
-    padding: 10px;
+    padding: 15px;
     background-color: hsl(278, 68%, 11%);
 }
+
+@media screen and (min-width:500px) {
+    Details{
+        text-transform: uppercase;
+        position: absolute;
+        top: 522px;
+        left: 94px;
+        line-height: 3em;
+    }
+}
+
+
+@media screen and (min-width:600px) {
+    .Details{
+        text-transform: uppercase;
+        position: absolute;
+        top: 550px;
+        left: 80px;
+        line-height: 3em;
+    }
+
+    input{
+        width:84%;
+        border-radius: 10px;
+        padding: 12px;
+    text-align: center;
+    background-color: #e5d9d9;
+    outline: none;
+    border: none;
+    color: hsl(260, 1.3%, 46.9%);
+    }
+
+
+.btn{
+    display: grid;
+    align-items: center;
+    place-items: center;
+    margin-top: 20px;
+    margin-right: 50px;
+}
+
+
+.btn button{
+    outline: none;
+    color: white;
+    width: 72%;
+    border: none;
+    border-radius: 10px;
+    padding: 15px;
+    background-color: hsl(278, 68%, 11%);
+}
+
+
+
+}
+
+
+@media screen and (min-width:760px) {
+    .Details{
+        text-transform: uppercase;
+        position: absolute;
+        top: 92px;
+        left: 800px;
+        line-height: 2.5em;
+    }
+
+    input{
+        width:67%;
+        border-radius: 10px;
+        padding: 12px;
+    text-align: center;
+    background-color: #e5d9d9;
+    outline: none;
+    border: none;
+    color: hsl(260, 1.3%, 46.9%);
+    }
+
+
+
+.date-inputs input{
+    width: 14%;
+}
+
+.cvc{
+    margin-right: 121px;
+}
+
+.cvc input{
+    width: 40%;
+}
+
+
+.btn{
+    display: grid;
+    align-items: center;
+    place-items: center;
+    margin-top: 20px;
+    margin-right: 170px;
+}
+
+
+.btn button{
+    outline: none;
+    color: white;
+    width: 72%;
+    border: none;
+    border-radius: 10px;
+    padding: 15px;
+    background-color: hsl(278, 68%, 11%);
+}
+
+
+
+}
+
+
+@media  screen and (min-width:800px) and (max-width:1080px) {
+    .Details{
+        text-transform: uppercase;
+        position: absolute;
+        top: 655px;
+        left: 201px;
+        line-height: 3em;
+    }
+
+    input{
+        width:67%;
+        border-radius: 10px;
+        padding: 12px;
+    text-align: center;
+    background-color: #e5d9d9;
+    outline: none;
+    border: none;
+    color: hsl(260, 1.3%, 46.9%);
+    }
+
+
+
+.date-inputs input{
+    width: 14%;
+}
+
+.cvc{
+    margin-right: 110px;
+}
+
+.cvc input{
+    width: 40%;
+}
+
+
+.btn{
+    display: grid;
+    align-items: center;
+    place-items: center;
+    margin-top: 20px;
+    margin-right: 171px;
+}
+
+
+.btn button{
+    outline: none;
+    color: white;
+    width: 72%;
+    border: none;
+    border-radius: 10px;
+    padding: 15px;
+    background-color: hsl(278, 68%, 11%);
+}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 .backdrop{
