--- a/src/components/Thankyou.css
+++ b/src/components/Thankyou.css
@@ -1,146 +1,38 @@
-
-
-.thank-you{
-    position: absolute;
-    top: 244px;
-    left: 2em;
-    color:  hsl(279, 6%, 55%);
-    text-align: center;
-background-color: white;
-padding: 20px;
-border-radius: 10%;
-line-height: 3em;
-}
-
-button{
-    width:45%;
+.thankyou{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+ padding: 20px;
+ color: hsl(279, 6%, 55%);
+ border-radius: 10px;
+  background-color: whitesmoke;
+  line-height: 1.6em;
 }
 
 
-@media screen and (min-width:280px) and (max-width:290px){
-
-.thank-you{
-    position: absolute;
-    top: 244px;
-    right: 2em;
-    color:  hsl(279, 6%, 55%);
-    text-align: center;
-background-color: white;
-padding: 20px;
-border-radius: 10%;
-line-height: 3em;
-}
-
+.thankyou button{
+  outline: none;
+    color: white;
+    width: 82%;
+    border: none;
+    border-radius: 10px;
+    padding: 15px;
+    background-color: hsl(278, 68%, 11%);
 }
 
 
-@media  screen and (min-width:320px) and (max-width:568px) {
 
-.thank-you{
-    position: absolute;
-    top: 244px;
-    left: 1em;
-    color:  hsl(279, 6%, 55%);
-    text-align: center;
-background-color: white;
-padding: 20px;
-border-radius: 10%;
-line-height: 3em;
+@media screen and (min-width:600px) {
+  .thankyou{
+    line-height: 2.4em;
+  }
 }
-} 
 
 
-@media screen and (min-width:360px) and (max-width:760px)  {
-
-.thank-you{
-    position: absolute;
-    top: 244px;
-    left: 2.4em;
-    color:  hsl(279, 6%, 55%);
-    text-align: center;
-background-color: white;
-padding: 20px;
-border-radius: 10%;
-line-height: 3em;
-}
-} 
-
-
-@media screen and (min-width:375px) and (max-width:812px){
-    .thank-you{
-        position: absolute;
-        top: 244px;
-        left: 2.8em;
-        color:  hsl(279, 6%, 55%);
-        text-align: center;
-    background-color: white;
-    padding: 20px;
-    border-radius: 10%;
+@media screen and (min-width:760px) {
+  .thankyou{
     line-height: 3em;
-    }
-} 
-
-@media screen and (min-width:390px)  {
-    .thank-you{
-        position: absolute;
-        top: 244px;
-        left: 3.3em;
-        color:  hsl(279, 6%, 55%);
-        text-align: center;
-    background-color: white;
-    padding: 20px;
-    border-radius: 10%;
-    line-height: 3em;
-    }
-}
-
-@media screen and (min-width:400px)  {
-    .thank-you{
-        position: absolute;
-        top: 244px;
-        left: 4em;
-        color:  hsl(279, 6%, 55%);
-        text-align: center;
-    background-color: white;
-    padding: 20px;
-    border-radius: 10%;
-    line-height: 3em;
-    }
-}
-
-
-
-
-@media screen and (min-width:600px)  {
-    .thank-you{
-        position: absolute;
-        top: 244px;
-        left: 13.3em;
-        color:  hsl(279, 6%, 55%);
-        text-align: center;
-    background-color: white;
-    padding: 20px;
-    border-radius: 10%;
-    line-height: 3em;
-    }
-} 
-
-
-
-
-@media screen and (min-width:760px)  {
-
-.thank-you{
-    position: absolute;
-    top: 112px;
-    left: 34em;
-    color:  hsl(279, 6%, 55%);
-    text-align: center;
-background-color: white;
-padding: 20px;
-border-radius: 10%;
-line-height: 3em;
-}
-
-
+  }
 }
