--- a/src/components/Details.css
+++ b/src/components/Details.css
@@ -1,123 +1,123 @@
-.Details{
+.Details {
+  text-transform: uppercase;
+  position: absolute;
+  top: 410px;
+  left: 32px;
+  line-height: 3em;
+  background-color: white;
+}
+
+input {
+  width: 83%;
+  border-radius: 10px;
+  padding: 12px;
+  text-align: center;
+  background-color: #e5d9d9;
+  outline: none;
+  border: none;
+  color: hsl(260, 1.3%, 46.9%);
+}
+
+form p {
+  color: hsl(279, 6%, 55%);
+}
+
+.cvc-date {
+  display: flex;
+  align-items: baseline;
+}
+
+.date-inputs input {
+  width: 24%;
+}
+
+#year {
+  margin-left: 20px;
+}
+
+.cvc input {
+  width: 50%;
+}
+
+.btn {
+  display: grid;
+  align-items: center;
+  place-items: center;
+  margin-top: 20px;
+  margin-right: 26px;
+}
+
+.btn button {
+  /* outline: none; */
+  color: white;
+  width: 82%;
+  border: none;
+  border-radius: 10px;
+  padding: 15px;
+  background-color: hsl(278, 68%, 11%);
+  cursor: pointer;
+}
+
+.btn button:hover {
+  background: white;
+  border: 1px solid hsl(278, 68%, 11%);
+  color: hsl(278, 68%, 11%);
+  transition: background 200ms ease-in;
+}
+
+#error-text {
+  color: hsl(0, 100%, 66%);
+  font-size: 18px;
+  margin-left: 10px;
+  text-transform: lowercase;
+}
+
+.error {
+  border: 2px solid hsl(0, 100%, 66%);
+}
+.normal {
+  border: 2px solid grey;
+}
+
+@media screen and (min-width: 500px) {
+  Details {
     text-transform: uppercase;
     position: absolute;
-    top: 410px;
-    left: 32px;
+    top: 522px;
+    left: 94px;
     line-height: 3em;
-    background-color: white;
+  }
 }
 
-input{
-    width:83%;
+@media screen and (min-width: 600px) {
+  .Details {
+    text-transform: uppercase;
+    position: absolute;
+    top: 550px;
+    left: 80px;
+    line-height: 3em;
+  }
+
+  input {
+    width: 84%;
     border-radius: 10px;
     padding: 12px;
-text-align: center;
-background-color: #e5d9d9;
-outline: none;
-border: none;
-color: hsl(260, 1.3%, 46.9%);
-}
-
-form p{
- color:   hsl(279, 6%, 55%);
-}
-
-.cvc-date{
-    display: flex;
-    align-items: baseline;
-}
-
- 
-
-.date-inputs input{
-    width: 24%;
-}
-
-
-#year{
-    margin-left: 20px;
-}
-
-.cvc input{
-    width: 50%;
-}
-
-
-
-.btn{
-    display: grid;
-    align-items: center;
-    place-items: center;
-    margin-top: 20px;
-    margin-right: 26px;
-}
-
-
-.btn button{
-    outline: none;
-    color: white;
-    width: 82%;
-    border: none;
-    border-radius: 10px;
-    padding: 15px;
-    background-color: hsl(278, 68%, 11%);
-}
-#error-text{
-    color: hsl(0, 100%, 66%);
-    font-size: 18px;
-    margin-left: 10px;
-    text-transform: lowercase;
-}
-
-.error{
-    border: 2px solid hsl(0, 100%, 66%);
-}
-.normal{
-    border: 2px solid grey;
-}
-
-@media screen and (min-width:500px) {
-    Details{
-        text-transform: uppercase;
-        position: absolute;
-        top: 522px;
-        left: 94px;
-        line-height: 3em;
-    }
-}
-
-
-@media screen and (min-width:600px) {
-    .Details{
-        text-transform: uppercase;
-        position: absolute;
-        top: 550px;
-        left: 80px;
-        line-height: 3em;
-    }
-
-    input{
-        width:84%;
-        border-radius: 10px;
-        padding: 12px;
     text-align: center;
     background-color: #e5d9d9;
     outline: none;
     border: none;
     color: hsl(260, 1.3%, 46.9%);
-    }
+  }
 
-
-.btn{
+  .btn {
     display: grid;
     align-items: center;
     place-items: center;
     margin-top: 20px;
     margin-right: 50px;
-}
+  }
 
-
-.btn button{
+  .btn button {
     outline: none;
     color: white;
     width: 72%;
@@ -125,58 +125,50 @@ form p{
     border-radius: 10px;
     padding: 15px;
     background-color: hsl(278, 68%, 11%);
+  }
 }
 
+@media screen and (min-width: 760px) {
+  .Details {
+    text-transform: uppercase;
+    position: absolute;
+    top: 92px;
+    left: 800px;
+    line-height: 2.5em;
+  }
 
-
-}
-
-
-@media screen and (min-width:760px) {
-    .Details{
-        text-transform: uppercase;
-        position: absolute;
-        top: 92px;
-        left: 800px;
-        line-height: 2.5em;
-    }
-
-    input{
-        width:67%;
-        border-radius: 10px;
-        padding: 12px;
+  input {
+    width: 67%;
+    border-radius: 10px;
+    padding: 12px;
     text-align: center;
     background-color: #e5d9d9;
     outline: none;
     border: none;
     color: hsl(260, 1.3%, 46.9%);
-    }
+  }
 
-
-
-.date-inputs input{
+  .date-inputs input {
     width: 14%;
-}
+  }
 
-.cvc{
+  .cvc {
     margin-right: 121px;
-}
+  }
 
-.cvc input{
+  .cvc input {
     width: 40%;
-}
+  }
 
-
-.btn{
+  .btn {
     display: grid;
     align-items: center;
     place-items: center;
     margin-top: 20px;
     margin-right: 170px;
-}
+  }
 
-
-.btn button{
+  .btn button {
     outline: none;
     color: white;
     width: 72%;
@@ -184,58 +176,50 @@ form p{
     border-radius: 10px;
     padding: 15px;
     background-color: hsl(278, 68%, 11%);
+  }
 }
 
+@media screen and (min-width: 800px) and (max-width: 1080px) {
+  .Details {
+    text-transform: uppercase;
+    position: absolute;
+    top: 655px;
+    left: 201px;
+    line-height: 3em;
+  }
 
-
-}
-
-
-@media  screen and (min-width:800px) and (max-width:1080px) {
-    .Details{
-        text-transform: uppercase;
-        position: absolute;
-        top: 655px;
-        left: 201px;
-        line-height: 3em;
-    }
-
-    input{
-        width:67%;
-        border-radius: 10px;
-        padding: 12px;
+  input {
+    width: 67%;
+    border-radius: 10px;
+    padding: 12px;
     text-align: center;
     background-color: #e5d9d9;
     outline: none;
     border: none;
     color: hsl(260, 1.3%, 46.9%);
-    }
+  }
 
-
-
-.date-inputs input{
+  .date-inputs input {
     width: 14%;
-}
+  }
 
-.cvc{
+  .cvc {
     margin-right: 110px;
-}
+  }
 
-.cvc input{
+  .cvc input {
     width: 40%;
-}
+  }
 
-
-.btn{
+  .btn {
     display: grid;
     align-items: center;
     place-items: center;
     margin-top: 20px;
     margin-right: 171px;
-}
+  }
 
-
-.btn button{
+  .btn button {
     outline: none;
     color: white;
     width: 72%;
@@ -243,30 +227,15 @@ form p{
     border-radius: 10px;
     padding: 15px;
     background-color: hsl(278, 68%, 11%);
+  }
 }
-}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.backdrop{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 1;
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
 }
