--- a/src/components/Thankyou.css
+++ b/src/components/Thankyou.css
@@ -1,38 +1,35 @@
-.thankyou{
+.thankyou {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
- padding: 20px;
- color: hsl(279, 6%, 55%);
- border-radius: 10px;
+  padding: 20px;
+  color: hsl(279, 6%, 55%);
+  border-radius: 10px;
   background-color: whitesmoke;
   line-height: 1.6em;
 }
 
-
-.thankyou button{
+.thankyou button {
   outline: none;
-    color: white;
-    width: 82%;
-    border: none;
-    border-radius: 10px;
-    padding: 15px;
-    background-color: hsl(278, 68%, 11%);
+  color: white;
+  width: 82%;
+  border: none;
+  border-radius: 10px;
+  padding: 15px;
+  background-color: hsl(278, 68%, 11%);
+  cursor: pointer;
 }
 
-
-
-@media screen and (min-width:600px) {
-  .thankyou{
+@media screen and (min-width: 600px) {
+  .thankyou {
     line-height: 2.4em;
   }
 }
 
-
-@media screen and (min-width:760px) {
-  .thankyou{
+@media screen and (min-width: 760px) {
+  .thankyou {
     line-height: 3em;
   }
 }
