--- a/src/components/Thankyou.css
+++ b/src/components/Thankyou.css
@@ -22,6 +22,13 @@
   cursor: pointer;
 }
 
+.thankyou button:hover {
+  background: white;
+  border: 1px solid hsl(278, 68%, 11%);
+  color: hsl(278, 68%, 11%);
+  transition: background 200ms ease-in;
+}
+
 @media screen and (min-width: 600px) {
   .thankyou {
     line-height: 2.4em;
