:sparkles: remove arrow icons from input

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -33,6 +32,16 @@ h1 {
   line-height: 1.1;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
 
 @media (prefers-color-scheme: light) {
   :root {
